# shaders

./: CMakeLists.txt  README.md  build.sh
shaders/: fragment.glsl
src/: main.cpp
